# st_samples

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
.old/st_apps/: pyproject.toml
.old/st_apps/st_apps/: main.py
_st_celery/: Dockerfile  Procfile  app.py  docker-compose.override.yaml  docker-compose.yaml  requirements.txt  worker.py
_st_celery/data/artifacts/: 00bbf871-21d6-4a1f-b4a9-14969ecab7e1.pkl  02360ba5-e46f-448f-8473-c28db3290a4a.pkl  0553373a-dec7-41df-aa12-f551c90f6dcf.pkl  175c18d1-c389-4acd-a508-27816c2d8426.pkl  1a8c8d4b-39be-4ab9-943e-51441205a541.pkl  273b7bec-a70b-4279-9465-5aef71f9fd2c.pkl  60d78865-a956-46fc-9e89-cd2558fb70eb.pkl  67b1b1bb-e822-4891-98f7-76cb25a86a14.pkl  7371f649-d40c-4d09-ba1f-92e3759d303e.pkl  774ebffa-b4d2-4f9f-80b2-191c7ed1287e.pkl  799d15c3-90ff-4a51-a6d6-6eab6d3b0578.pkl  8823b7b9-86ff-4f5d-a49b-260c6ae1576c.pkl  929c624b-0c35-4d99-99a7-525ab2d7f448.pkl  935806f6-30ef-4679-9ef0-46c12bacabfa.pkl  b50d7bc3-9467-467a-8dab-6d0b6daaee5d.pkl  b54d39e7-3c1a-4322-b346-94658c8d9115.pkl  bc075dd6-a5dd-4f33-b72d-8d7f60c1674f.pkl  bd7f63ae-0e08-4a42-846d-78fa18a402e7.pkl  c593f9cf-cfa6-4d48-b1ac-3031891e1806.pkl  cc7f29e6-a167-4114-a4d8-0de0ddeb3d4b.pkl  d73077e5-9d1c-414e-9b9d-d96ca32c950f.pkl  d769b2fd-c063-4c24-a47a-b9ba8ba195cc.pkl  e57b15fe-151a-4e64-8890-b8479dc62405.pkl  eb51bf60-915c-4a9f-8075-6a463beaf472.pkl  ef8429cd-9749-44aa-ae0e-d231edf52461.pkl  f4c13d85-e482-43d1-8ec7-be01e075689d.pkl  f4e33e34-5418-4759-ae06-be51977bffda.pkl  f8eb7234-24af-44b5-b2f7-a7c9195c5ec8.pkl  fc5f936f-b13c-4fa0-97b0-f5fd96a0925c.pkl
st_aggrid_example/: app.py  pyproject.toml
st_celery_jobq/: README.md  app.py  pyproject.toml  worker.py
st_jobq/: app.py  job_queue.py  pyproject.toml  run.sh  worker.py
st_jobq/artifacts/2021-07-07_164513/: result.pkl
st_jobq/artifacts/2021-07-07_164603/: result.pkl
st_map/: app.py  pyproject.toml
st_multipage/: app.py  page1.py
st_multipage_link/: app.py  page2.py
st_multipage_link_select/: app.py  page1.py  page2.py  pyproject.toml
st_password/: app.py  pyproject.toml
st_request_header/: app.py  pyproject.toml
st_snap/: pyproject.toml  st.py
st_snapshot/: st.py
st_snapshot/snapshots/: 2021-12-08_164233.pkl  2021-12-08_164340.pkl  2021-12-08_170806.pkl  2021-12-08_171129.pkl
st_sortables/: app.py  pyproject.toml
st_start_stop/: app.multiuser_thread.py  app.process.py  app.py  app.thread.py  pyproject.toml
st_steps/: app.py  pyproject.toml
st_tsp/: app.py  pyproject.toml
st_tsp/.streamlit/: config.toml
st_tsp/data/: distance_duration_and_steps.csv  tokyo_ward_offices.csv
st_upload/: app.py  pyproject.toml  save.py
