[tool.poetry]
name = "st_aggrid_example"
version = "0.1.0"
description = ""
authors = ["ohtaman <ohtamans@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.1.0"
streamlit-aggrid = "^0.2.2"
altair = "4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
