[tool.poetry]
name = "_st_celery"
version = "0.1.0"
description = ""
authors = ["ohtaman <ohtamans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
celery = "5.1.2"
watchdog = "^2.1.6"
PyYAML = "^6.0"
redis = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
