[tool.poetry]
name = "st_jobq"
version = "0.1.0"
description = ""
authors = ["ohtaman <ohtamans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.1.0"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
