[tool.poetry]
name = "st_tsp"
version = "0.1.0"
description = ""
authors = ["ohtaman <ohtamans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.8.1"
streamlit-sortables = "^0.1.3"
pydeck = "^0.7.1"
PuLP = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
